feat(music): add required resource files

--- a/musiclibrary/src/main/res/values/strings.xml
+++ b/musiclibrary/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="unknown">未知</string>
+    <string name="play_all">播放全部</string>
+    <string name="daily_recommend">每日推荐</string>
 </resources>
