--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="home_bottom_navi_discover">发现</string>
     <string name="home_bottom_navi_mine">我的</string>
     <string name="home_bottom_navi_video">视频</string>
+    
+    <!--Discover界面相关-->
+    <string name="home_discover_daily_recommend_playlist">推荐歌单</string>
+    <string name="home_discover_recommend_new_song">推荐新歌</string>
 </resources>
