--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="home_discover_daily_recommend_playlist">推荐歌单</string>
     <string name="home_discover_recommend_new_song">推荐新歌</string>
     <string name="home_discover_search_hint">歌曲搜索</string>
+    <string name="home_discover_single_row_text_daily_recommend">每日推荐</string>
+    <string name="home_discover_single_row_text_playlist">歌单</string>
+    <string name="home_discover_single_row_text_ranking">排行榜</string>
 </resources>
