--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="home_discover_single_row_text_daily_recommend">每日推荐</string>
     <string name="home_discover_single_row_text_playlist">歌单</string>
     <string name="home_discover_single_row_text_ranking">排行榜</string>
+    
+    <!--Search相关-->
+    <string name="home_search_content_song_tab">单曲</string>
+    <string name="home_search_content_playlist_tab">歌单</string>
 </resources>
