--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="home_label_phone_number">phoneNumber</string>
     <string name="home_label_captcha">captcha</string>
     <string name="home_label_password">password</string>
+
+    <!--排行榜相关字符-->
+    <string name="home_toplist_title">排行榜</string>
+    <string name="home_toplist_error_tip">出错啦，点击重新加载</string>
+    <string name="home_toplist_loading_tip">加载中......</string>
 </resources>
