--- a/musiclibrary/src/main/res/values/strings.xml
+++ b/musiclibrary/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="clear_playing_msg">确定要清空播放列表吗?</string>
     <string name="ensure">确定</string>
     <string name="cancel">取消</string>
+    <string name="next_play">下一首播放</string>
+    <string name="download">下载</string>
 </resources>
