--- a/musiclibrary/src/main/res/values/strings.xml
+++ b/musiclibrary/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="cancel">取消</string>
     <string name="next_play">下一首播放</string>
     <string name="download">下载</string>
+    <string name="playlist_detail">歌单详情</string>
 </resources>
