--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -42,5 +42,5 @@
     <string name="home_toplist_loading_tip">加载中......</string>
     
     <!--"我的"界面相关-->
-    <string name="home_mine_nickname_tips">用户名</string>
+    <string name="home_mine_nickname_tips">昵称</string>
 </resources>
