--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -43,7 +43,9 @@
 
     <!--"我的"界面相关-->
     <string name="home_mine_nickname_tips">昵称</string>
-
+    <string name="home_mine_go_login">去登陆>></string>
+    <string name="home_mine_switch_account">切换账号>></string>
+    
     <!--"轮播图"相关-->
     <string name="home_banner_invalid_url_tips">不存在有效链接</string>
 </resources>
