--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="home_video_title_is_null">暂无标题</string>
     <string name="home_video_route_to_login">登录后查看更多内容</string>
     <string name="home_video_unknown_error">出现未知错误，点击屏幕以重试</string>
+    <string name="home_video_refresh_video_error">〒▽〒内容似乎失踪了呢\n点击屏幕重新加载</string>
+    <string name="home_video_append_reload">重新加载</string>
 </resources>
