--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <!--"下载管理"界面相关-->
     <string name="home_download_manage_click_to_download">点击开始下载</string>
     <string name="home_download_manage_prepare_download">下载队列中等待</string>
+    <string name="home_download_manage_task_cancelling">取消中...</string>
 </resources>
