refactor(home): Make DownloadManageActivity UI look beautiful

--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -60,4 +60,9 @@
     <string name="home_download_manage_click_to_download">点击开始下载</string>
     <string name="home_download_manage_prepare_download">下载队列中等待</string>
     <string name="home_download_manage_task_cancelling">取消中...</string>
+    <string name="home_download_manage_task_downloading">下载中</string>
+    <string name="home_download_manage_task_paused">已暂停</string>
+    <string name="home_download_manage_task_success">下载成功</string>
+    <string name="home_download_manage_task_failure">下载失败</string>
+    <string name="home_download_manage_title">下载管理</string>
 </resources>
