--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="common_download_manage_task_success">下载成功</string>
     <string name="common_download_manage_task_failure">下载失败</string>
     <string name="common_download_manage_title">下载管理</string>
+    <string name="common_download_manage_task_empty">当前没有下载任务~~</string>
 </resources>
