--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="home_toplist_title">排行榜</string>
     <string name="home_toplist_error_tip">出错啦，点击重新加载</string>
     <string name="home_toplist_loading_tip">加载中......</string>
+    <string name="home_toplist_load_song_error">加载失败，请稍后重试</string>
 
     <!--"我的"界面相关-->
     <string name="home_mine_nickname_tips">昵称</string>
