--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <!--Search相关-->
     <string name="home_search_content_song_tab">单曲</string>
     <string name="home_search_content_playlist_tab">歌单</string>
+    <string name="home_search_content_song_pop_next_play">下一首播放</string>
+    <string name="home_search_content_song_pop_download">下载</string>
 
     <!--登录界面字符常量-->
     <string name="home_login_next_step">下一步</string>
