--- a/home/src/main/res/values/strings.xml
+++ b/home/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="home_mine_switch_account">切换账号>></string>
     <string name="home_mine_go_download_manage">下载管理</string>
     <string name="home_mine_about_page">关于</string>
+    <string name="home_mine_clear_cache">清理缓存</string>
     
     <!--"轮播图"相关-->
     <string name="home_banner_invalid_url_tips">不存在有效链接</string>
@@ -65,4 +66,7 @@
     <string name="home_about_title">关于</string>
     <string name="home_about_code_source">源代码</string>
     <string name="home_about_licenses">开源许可证</string>
+
+    <string name="home_clear_cache_msg">确定要清空缓存吗?</string>
+    <string name="home_clear_cache_tip">正在清理…</string>
 </resources>
